--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -67,10 +67,10 @@
     "@azure/msal-node": "~1.1.0",
     "@microsoft/microsoft-graph-client": "^2.2.1",
     "@microsoft/teams-js": "^1.9.0",
-    "axios": "^0.21.1",
-    "botbuilder": ">=4.9.4 <5.0.0",
-    "botbuilder-core": ">=4.9.4 <5.0.0",
-    "botbuilder-dialogs": ">=4.9.4 <5.0.0",
+    "axios": "^0.23.0",
+    "botbuilder": ">=4.15.0-rc0 <5.0.0",
+    "botbuilder-core": ">=4.15.0-rc0 <5.0.0",
+    "botbuilder-dialogs": ">=4.15.0-rc0 <5.0.0",
     "jwt-decode": "^3.1.2",
     "memory-cache": "^0.2.0",
     "tedious": "^9.2.1",
@@ -102,7 +102,7 @@
     "@types/tedious": "^4.0.3",
     "@types/url-join": "^4.0.0",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^4.13.0",
     "adm-zip": "^0.5.5",
     "chai": "^4.2.0",
@@ -110,7 +110,7 @@
     "concurrently": "^6.0.2",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
-    "eslint": "^7.15.0",
+    "eslint": "^8.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^9.1.0",
     "got": "^11.8.2",
@@ -126,9 +126,9 @@
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "lint-staged": "^10.5.4",
-    "mocha": "^7.1.1",
-    "mocha-junit-reporter": "^1.18.0",
+    "lint-staged": "^11.2.3",
+    "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
     "mocked-env": "^1.3.2",
     "nyc": "^15.1.0",
     "playwright-chromium": "^1.11.1",
