--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -63,24 +63,24 @@
   "dependencies": {
     "@azure/core-auth": "^1.3.0",
     "@azure/core-http": "^1.2.0",
-    "@azure/identity": "^1.3.0",
+    "@azure/identity": "^2.0.1",
     "@azure/msal-node": "~1.1.0",
     "@microsoft/microsoft-graph-client": "^2.2.1",
     "@microsoft/teams-js": "^1.9.0",
-    "axios": "^0.21.1",
-    "botbuilder": ">=4.9.4 <5.0.0",
-    "botbuilder-core": ">=4.9.4 <5.0.0",
-    "botbuilder-dialogs": ">=4.9.4 <5.0.0",
+    "axios": "^0.24.0",
+    "botbuilder": ">=4.15.0-rc0 <5.0.0",
+    "botbuilder-core": ">=4.15.0-rc0 <5.0.0",
+    "botbuilder-dialogs": ">=4.15.0-rc0 <5.0.0",
     "jwt-decode": "^3.1.2",
     "memory-cache": "^0.2.0",
-    "tedious": "^9.2.1",
+    "tedious": "^14.0.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@azure/arm-sql": "^7.0.2",
-    "@azure/ms-rest-nodeauth": "^3.0.6",
-    "@commitlint/cli": "^12.0.1",
+    "@azure/ms-rest-nodeauth": "^3.1.0",
+    "@commitlint/cli": "^14.1.0",
     "@commitlint/config-conventional": "^12.0.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.12.4",
@@ -110,14 +110,14 @@
     "concurrently": "^6.0.2",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^9.1.0",
     "got": "^11.8.2",
     "isomorphic-fetch": "^3.0.0",
     "jwt-builder": "^1.1.0",
-    "karma": "^6.3.2",
+    "karma": "^6.3.7",
     "karma-chrome-launcher": "^3.0.0",
     "karma-coverage": "^2.0.0",
     "karma-edge-launcher": "^0.4.2",
@@ -127,9 +127,9 @@
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "lint-staged": "^10.5.4",
-    "mocha": "^7.1.1",
-    "mocha-junit-reporter": "^1.18.0",
+    "lint-staged": "^11.2.6",
+    "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
     "mocked-env": "^1.3.2",
     "nyc": "^15.1.0",
     "playwright-chromium": "^1.11.1",
