--- a/templates/tab/js/default/package.json
+++ b/templates/tab/js/default/package.json
@@ -16,12 +16,11 @@
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^4.0.3"
+        "react-scripts": "^5.0.1"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
-        "env-cmd": "^10.1.0",
-        "react-error-overlay": "6.0.9"
+        "env-cmd": "^10.1.0"
     },
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
